--- a/MultiMiner.Win/MultiMiner.Win.csproj
+++ b/MultiMiner.Win/MultiMiner.Win.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="Data\Configuration\Metadata.cs" />
     <Compile Include="Data\Configuration\PoolDefaults.cs" />
+    <Compile Include="Data\PoolFeatureAnchors.cs" />
     <Compile Include="Extensions\ApplicationConfigurationExtensions.cs" />
     <Compile Include="Extensions\AssemblyExtensions.cs" />
     <Compile Include="Extensions\DeviceConfigurationExtensions.cs" />
