--- a/MultiMiner.Win/MultiMiner.Win.csproj
+++ b/MultiMiner.Win/MultiMiner.Win.csproj
@@ -128,11 +128,11 @@
     <Compile Include="Forms\CoinEditForm.Designer.cs">
       <DependentUpon>CoinEditForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\Configuration\CoinsForm.cs">
+    <Compile Include="Forms\Configuration\PoolsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Configuration\CoinsForm.Designer.cs">
-      <DependentUpon>CoinsForm.cs</DependentUpon>
+    <Compile Include="Forms\Configuration\PoolsForm.Designer.cs">
+      <DependentUpon>PoolsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Data\ApiLogEntry.cs" />
     <Compile Include="Data\Configuration\Perks.cs" />
@@ -233,8 +233,8 @@
     <EmbeddedResource Include="Forms\CoinEditForm.resx">
       <DependentUpon>CoinEditForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\Configuration\CoinsForm.resx">
-      <DependentUpon>CoinsForm.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\Configuration\PoolsForm.resx">
+      <DependentUpon>PoolsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Configuration\ProxySettingsForm.resx">
       <DependentUpon>ProxySettingsForm.cs</DependentUpon>
