--- a/MultiMiner.NiceHash/MultiMiner.NiceHash.csproj
+++ b/MultiMiner.NiceHash/MultiMiner.NiceHash.csproj
@@ -1,19 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0DBEF993-1B34-4D80-AB6A-F662604325DC}</ProjectGuid>
+    <ProjectGuid>{5A05D03D-7006-406C-84B0-A2717A07CEB7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MultiMiner.Xgminer</RootNamespace>
-    <AssemblyName>MultiMiner.Xgminer</AssemblyName>
+    <RootNamespace>MultiMiner.NiceHash</RootNamespace>
+    <AssemblyName>MultiMiner.NiceHash</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
-    <ProductVersion>12.0.0</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,39 +31,34 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Newtonsoft.Json\net35\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AuthenticationFailedArgs.cs" />
-    <Compile Include="Data\AlgorithmNames.cs" />
-    <Compile Include="Data\CoinAlgorithm.cs" />
-    <Compile Include="Data\Device\Device.cs" />
-    <Compile Include="Data\Device\DeviceDescriptor.cs" />
-    <Compile Include="Data\Device\DeviceKind.cs" />
-    <Compile Include="Data\Device\DevicePlatform.cs" />
-    <Compile Include="Data\KnownAlgorithm.cs" />
-    <Compile Include="Data\KnownAlgorithms.cs" />
-    <Compile Include="LaunchFailedArgs.cs" />
-    <Compile Include="LogLaunchArgs.cs" />
-    <Compile Include="MinerLaunchException.cs" />
-    <Compile Include="Data\MiningPool.cs" />
-    <Compile Include="Parsers\DeviceListParser.cs" />
-    <Compile Include="Parsers\EnumerateDevicesParser.cs" />
-    <Compile Include="Miner.cs" />
-    <Compile Include="Data\Configuration\Miner.cs" />
-    <Compile Include="MinerParameter.cs" />
+    <Compile Include="ApiContext.cs" />
+    <Compile Include="Extensions\MultipoolInformationExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MultiMiner.MultipoolApi\MultiMiner.MultipoolApi.csproj">
+      <Project>{4af4b34a-07db-456b-9c58-b0863435fe54}</Project>
+      <Name>MultiMiner.MultipoolApi</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MultiMiner.Utility\MultiMiner.Utility.csproj">
-      <Project>{99B0F266-EFF7-4416-8C36-8356396A11CA}</Project>
+      <Project>{99b0f266-eff7-4416-8c36-8356396a11ca}</Project>
       <Name>MultiMiner.Utility</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MultiMiner.Xgminer\MultiMiner.Xgminer.csproj">
+      <Project>{0dbef993-1b34-4d80-ab6a-f662604325dc}</Project>
+      <Name>MultiMiner.Xgminer</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
