--- a/MultiMiner.Engine.Tests/MultiMiner.Engine.Tests.csproj
+++ b/MultiMiner.Engine.Tests/MultiMiner.Engine.Tests.csproj
@@ -8,7 +8,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MultiMiner.Engine.Tests</RootNamespace>
     <AssemblyName>MultiMiner.Engine.Tests</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -53,7 +53,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="InstallerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MultiMiner.Engine\MultiMiner.Engine.csproj">
+      <Project>{845687bb-ec47-46d3-ac9d-6fcfb63de8f5}</Project>
+      <Name>MultiMiner.Engine</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
