--- a/MultiMiner.MobileMiner/MultiMiner.MobileMiner.csproj
+++ b/MultiMiner.MobileMiner/MultiMiner.MobileMiner.csproj
@@ -35,7 +35,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -47,6 +49,7 @@
     <Compile Include="Data\NotificationKind.cs" />
     <Compile Include="Helpers\InputValidation.cs" />
     <Compile Include="Data\MiningStatistics.cs" />
+    <Compile Include="WebBrowserProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Data\RemoteCommand.cs" />
   </ItemGroup>
