--- a/MultiMiner.Win/MultiMiner.Win.csproj
+++ b/MultiMiner.Win/MultiMiner.Win.csproj
@@ -76,11 +76,11 @@
     <Compile Include="Forms\AboutForm.Designer.cs">
       <DependentUpon>AboutForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\ApiConsoleForm.cs">
-      <SubType>Form</SubType>
+    <Compile Include="Controls\ApiConsoleControl.cs">
+      <SubType>usercontrol</SubType>
     </Compile>
-    <Compile Include="Forms\ApiConsoleForm.Designer.cs">
-      <DependentUpon>ApiConsoleForm.cs</DependentUpon>
+    <Compile Include="Controls\ApiConsoleControl.Designer.cs">
+      <DependentUpon>ApiConsoleControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Configuration\AdvancedSettingsForm.cs">
       <SubType>Form</SubType>
@@ -216,8 +216,8 @@
     <EmbeddedResource Include="Forms\AboutForm.resx">
       <DependentUpon>AboutForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\ApiConsoleForm.resx">
-      <DependentUpon>ApiConsoleForm.cs</DependentUpon>
+    <EmbeddedResource Include="Controls\ApiConsoleControl.resx">
+      <DependentUpon>ApiConsoleControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Configuration\AdvancedSettingsForm.resx">
       <DependentUpon>AdvancedSettingsForm.cs</DependentUpon>
