Refactor and format MinerForm code

--- a/MultiMiner.MobileMiner/MultiMiner.MobileMiner.csproj
+++ b/MultiMiner.MobileMiner/MultiMiner.MobileMiner.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ApiContext.cs" />
     <Compile Include="Data\Notification.cs" />
     <Compile Include="Data\NotificationKind.cs" />
+    <Compile Include="Data\RemoteCommandText.cs" />
     <Compile Include="Helpers\InputValidation.cs" />
     <Compile Include="Data\MiningStatistics.cs" />
     <Compile Include="WebBrowserProvider.cs" />
