--- a/MultiMiner.Win/packages.config
+++ b/MultiMiner.Win/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net35" />
+  <package id="SSH.NET" version="2013.4.7" targetFramework="net35" />
 </packages>
