--- a/MultiMiner.UX/MultiMiner.UX.csproj
+++ b/MultiMiner.UX/MultiMiner.UX.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Extensions\IPAddressExtensions.cs" />
     <Compile Include="Extensions\NetworkDeviceExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\ApplicationViewModel.cs" />
     <Compile Include="ViewModels\DeviceViewModel.cs" />
     <Compile Include="ViewModels\MinerFormViewModel.cs" />
   </ItemGroup>
