--- a/MultiMiner.UX/MultiMiner.UX.csproj
+++ b/MultiMiner.UX/MultiMiner.UX.csproj
@@ -35,6 +35,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Newtonsoft.Json\net35\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="Renci.SshNet">
+      <HintPath>..\packages\SSH.NET.2013.4.7\lib\net35\Renci.SshNet.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -52,7 +55,8 @@
     <Compile Include="Data\Configuration\Paths.cs" />
     <Compile Include="Data\Configuration\Perks.cs" />
     <Compile Include="Data\Configuration\PoolDefaults.cs" />
-    <Compile Include="Data\Notification.cs" />
+    <Compile Include="Data\CredentialsEventArgs.cs" />
+    <Compile Include="Data\NotificationEventArgs.cs" />
     <Compile Include="Data\PoolFeatureAnchors.cs" />
     <Compile Include="Data\UserAgent.cs" />
     <Compile Include="Extensions\IPAddressExtensions.cs" />
@@ -128,6 +132,9 @@
       <Project>{0dbef993-1b34-4d80-ab6a-f662604325dc}</Project>
       <Name>MultiMiner.Xgminer</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
