--- a/MultiMiner.UX/MultiMiner.UX.csproj
+++ b/MultiMiner.UX/MultiMiner.UX.csproj
@@ -58,10 +58,13 @@
     <Compile Include="Data\CredentialsEventArgs.cs" />
     <Compile Include="Data\NotificationEventArgs.cs" />
     <Compile Include="Data\PoolFeatureAnchors.cs" />
+    <Compile Include="Data\ProgressEventArgs.cs" />
     <Compile Include="Data\UserAgent.cs" />
     <Compile Include="Extensions\IPAddressExtensions.cs" />
     <Compile Include="Extensions\IPEndPointExtensions.cs" />
+    <Compile Include="Extensions\MiningStatisticsExtensions.cs" />
     <Compile Include="Extensions\NetworkDeviceExtensions.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ApplicationViewModel.cs" />
     <Compile Include="ViewModels\DeviceViewModel.cs" />
