--- a/MultiMiner.Utility/MultiMiner.Utility.csproj
+++ b/MultiMiner.Utility/MultiMiner.Utility.csproj
@@ -78,6 +78,8 @@
     <Compile Include="Net\ApiWebClient.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Net\Extensions\IPAddressExtensions.cs" />
+    <Compile Include="Net\SubnetClass.cs" />
     <Compile Include="OS\OwnedProcesses.cs" />
     <Compile Include="OS\StartupShortcut.cs" />
     <Compile Include="Serialization\ConfigurationReaderWriter.cs" />
