--- a/MultiMiner.UX/MultiMiner.UX.csproj
+++ b/MultiMiner.UX/MultiMiner.UX.csproj
@@ -43,7 +43,6 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.Extensions" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -62,6 +61,9 @@
     <Compile Include="Data\NotificationEventArgs.cs" />
     <Compile Include="Data\PoolFeatureAnchors.cs" />
     <Compile Include="Data\ProgressEventArgs.cs" />
+    <Compile Include="Data\PromptButtons.cs" />
+    <Compile Include="Data\PromptIcon.cs" />
+    <Compile Include="Data\PromptResult.cs" />
     <Compile Include="Data\RemotingEventArgs.cs" />
     <Compile Include="Data\UserAgent.cs" />
     <Compile Include="Extensions\ApplicationConfigurationExtensions.cs" />
@@ -74,6 +76,7 @@
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Extensions\TimeIntervalExtensions.cs" />
     <Compile Include="Extensions\XgminerConfigurationExtensions.cs" />
+    <Compile Include="Data\PromptEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ApplicationViewModel.cs" />
     <Compile Include="ViewModels\DeviceViewModel.cs" />
