--- a/MultiMiner.Utility/MultiMiner.Utility.csproj
+++ b/MultiMiner.Utility/MultiMiner.Utility.csproj
@@ -38,43 +38,14 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Management" />
     <Reference Include="System.Web.Extensions" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Forms\HourGlass.cs" />
-    <Compile Include="Forms\ListViewEx.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Forms\ListViewEx.Designer.cs">
-      <DependentUpon>ListViewEx.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\MessageBoxFontForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\MessageBoxFontForm.Designer.cs">
-      <DependentUpon>MessageBoxFontForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\MessageBoxFontUserControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Forms\MessageBoxFontUserControl.Designer.cs">
-      <DependentUpon>MessageBoxFontUserControl.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\NoFlickerListView.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Forms\NoFlickerListView.Designer.cs">
-      <DependentUpon>NoFlickerListView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\ReadOnlyTextBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Forms\Timers.cs" />
     <Compile Include="NativeMethods.cs" />
+    <Compile Include="Timers\Timers.cs" />
     <Compile Include="Net\ApiWebClient.cs">
       <SubType>Component</SubType>
     </Compile>
